[project]
name = "comfyui-flux1quantize-mz"
description = "Quantization tools are from [a/https://github.com/casper-hansen/AutoAWQ](https://github.com/casper-hansen/AutoAWQ) and [a/https://github.com/IST-DASLab/marlin](https://github.com/IST-DASLab/marlin)\nOnly applicable to graphics cards with sm_80 and above (30 series and above)\nNeed to install marlin dependencies first"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MinusZoneAI/ComfyUI-Flux1Quantize-MZ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Flux1Quantize-MZ"
Icon = ""
